--- a/website/config.yaml
+++ b/website/config.yaml
@@ -1,6 +1,6 @@
-baseURL: "https://profile.gurusabarish.tech"
+baseURL: "https://mrbayat.netlify.app"
 languageCode: "en-us"
-title: "Hugo-profile"
+title: "Mohammad Reza Bayat"
 theme: "./.."
 relativeURLs: true
 
@@ -18,7 +18,7 @@ taxonomies:
 
 enableEmoji: true
 params:
-  version: 3
+  version: 2
 
   favicon: "/images/fav.png"
   description: "A high performance hugo theme for personal portfolio and blog."
