--- a/website/config.yaml
+++ b/website/config.yaml
@@ -21,7 +21,7 @@ params:
   version: 3
 
   favicon: "/images/fav.png"
-  description: "A high performance hugo theme for personal portfolio and blog."
+  description: "Persoanl website of Dr. Mohammad Reza Bayat."
 
   # Navbar Menus
   customMenus:
@@ -31,13 +31,13 @@ params:
   # home
   disable_home: false
   profile_image: "/images/profile.png"
-  name: "Example name"
-  profession: "Profession"
-  github: "https://github.com"
-  linkedin: "https://linkedin.com"
-  twitter: "https://twitter.com/"
-  instagram: "https://instagram.com/"
-  facebook: "https://facebook.com"
+  name: "Mohammad Reza Bayat"
+  profession: "a computational mechanics researcher."
+  github: "https://github.com/mrezabayat"
+  linkedin: "https://linkedin.com/in/mrbayat"
+  # twitter: "https://twitter.com/"
+  instagram: "https://www.instagram.com/mrebayat/"
+  # facebook: "https://facebook.com"
 
   # About
   disable_about: false
