--- a/website/config.yaml
+++ b/website/config.yaml
@@ -73,6 +73,13 @@ params:
         - point: Static Structural, Modal and Harmonic analysis of components using numerical methods.
         - point: Automatic FEA employing ANSYS Customization Toolkit (ACT).
         - point: Electrical, thermal, mechanical, and fluid-solid interaction analysis.
+    - company: "Amazon"
+      role: "Fullstack developer"
+      startdate: Feb 2019
+      enddate: Jan 2020
+      featuredpoints:
+        - point: Lead backend developer for a product.
+        - point: Created a frontend design for a product.
 
   # Education
   disable_education: false
