--- a/website/config.yaml
+++ b/website/config.yaml
@@ -66,7 +66,7 @@ params:
         - point: Developing and bringing new physics insights of flexoelectric metamaterials which are to be published in a highly reputed journal of mechanics.
         - point: Documenting and presenting the results of simulations to the people in the group.
     - company: "MAPNA Generator"
-      role: "R&D Mechanical Engineer"
+      role: "RD Mechanical Engineer"
       startdate: Oct 2016
       enddate: Aug 2020
       featuredpoints:
