--- a/website/config.yaml
+++ b/website/config.yaml
@@ -56,15 +56,14 @@ params:
   # Experience
   disable_experience: false
   experience:
-    - company: "Universitat Politècnica de Catalunya"
-      role: "Simulation Software Developer"
-      startdate: Aug 2020
-      enddate: present
+    - company: "MAPNA Generator"
+      role: "R&D Mechanical Engineer"
+      startdate: Oct 2016
+      enddate: Aug 2020
       featuredpoints:
-        - point: Programming trimmed isogeometric analysis in an MPI-based parallel C++ library.
-        - point: Modeling multiscale and muliphysics Flexoelectricity (higher-order nonlinear coupled PDE).
-        - point: Developing and bringing new physics insights of flexoelectric metamaterials which are to be published in a highly reputed journal of mechanics.
-        - point: Documenting and presenting the results of simulations to the people in the group.
+        - point: Static Structural, Modal and Harmonic analysis of components using numerical methods.
+        - point: Automatic FEA employing ANSYS Customization Toolkit (ACT).
+        - point: Electrical, thermal, mechanical, and fluid-solid interaction analysis.
     - company: "Amazon"
       role: "Fullstack developer"
       startdate: Feb 2019
