--- a/website/config.yaml
+++ b/website/config.yaml
@@ -65,7 +65,7 @@ params:
         - point: Modeling multiscale and muliphysics Flexoelectricity (higher-order nonlinear coupled PDE).
         - point: Developing and bringing new physics insights of flexoelectric metamaterials which are to be published in a highly reputed journal of mechanics.
         - point: Documenting and presenting the results of simulations to the people in the group.
-    - company: "MAPNA Generator"
+    - company: "MAPNA"
       role: "R&D Mechanical Engineer"
       startdate: Oct 2016
       enddate: Aug 2020
