--- a/website/config.yaml
+++ b/website/config.yaml
@@ -79,19 +79,19 @@ params:
   education:
     - degree: "PhD"
       branch: "Mechanical Engineering"
-      university: "University of Tehran"
+      university: "University of Tehran - Overall GPA: 18.24/20"
+      startedyear: "2015"
+      graduation: "2019"
+    - degree: "Master"
+      branch: "Mechanical Engineering"
+      university: "University of Tehran - Overall GPA: 18.68/20"
       startedyear: "2013"
-      graduation: "2018"
-    - degree: "Degree"
-      branch: "Branch"
-      university: "Example university"
-      startedyear: "year"
-      graduation: "year"
-    - degree: "Degree"
-      branch: "Branch"
-      university: "Example university"
-      startedyear: "year"
-      graduation: "year"
+      graduation: "2015"
+    - degree: "Bachelor"
+      branch: "Mechanical Engineering - - Overall GPA: 18.21/20"
+      university: "Zanjan University"
+      startedyear: "2009"
+      graduation: "2013"
 
   # Projects
   disable_projects: false
