Add project with detail

--- a/website/config.yaml
+++ b/website/config.yaml
@@ -95,12 +95,12 @@ params:
 
   # Projects
   disable_projects: false
-  projects:
-    - name: "HIgh PERformance LIbrary for Finite Element (hiperlife)"
-      img: /images/logo_wtitle_white.svg
-      githublink: "https://git.lacan.upc.edu/HPLFEgroup"
-      featuredlink: "/"
-      description: "hiperlife is a high performance parallel library for finite elements. The aim of this library is to provide a computational framework to address problems of cell and tissue mechanobiology for a wide range of cases and users, with special focus on curved surfaces (the cell membrane, the cell cortex, epithelial monolayers,etc.). It is designed to handle the multiphysic nature of problems in mechanobiology, to manage unstructured grids that deal with complex geometries and to allow arbitrary higher-order basis functions that describe the curvature of interfaces. hiperlife is written in C++, uses the Message Passage Interface (MPI) paradigm for parallelism, and is built on top of several packages of the Trilinos Project. These particular choices set the basis for the main features of the library, namely, parallelism, flexibility, user-centered design and sustainability."
+  # projects:
+  #   - name: "HIgh PERformance LIbrary for Finite Element (hiperlife)"
+  #     img: /images/logo_wtitle_white.svg
+  #     githublink: "https://git.lacan.upc.edu/HPLFEgroup"
+  #     featuredlink: "/"
+  #     description: "hiperlife is a high performance parallel library for finite elements. The aim of this library is to provide a computational framework to address problems of cell and tissue mechanobiology for a wide range of cases and users, with special focus on curved surfaces (the cell membrane, the cell cortex, epithelial monolayers,etc.). It is designed to handle the multiphysic nature of problems in mechanobiology, to manage unstructured grids that deal with complex geometries and to allow arbitrary higher-order basis functions that describe the curvature of interfaces. hiperlife is written in C++, uses the Message Passage Interface (MPI) paradigm for parallelism, and is built on top of several packages of the Trilinos Project. These particular choices set the basis for the main features of the library, namely, parallelism, flexibility, user-centered design and sustainability."
 
   # Achievements
   disable_achievements: false
